Currently working on also updating the blackboard class:     - instead of q, p, and u, we need q_s, p_l, p_mf, and u_s     - should also change nomenclature throughout the code in other places

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -495,7 +495,7 @@
     "        return p_H_mf_dot\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_l, p_mf):\n",
-    "        # there should be one ofthese for each control variable\n",
+    "        # there should be one of these for each control variable\n",
     "        p_H_mf_u_dot_1 = q_l + p_mf # or something\n",
     "#         p_H_mf_u_dot_2 = q_l[1] + p_mf[1] # or something\n",
     "        return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -622,7 +622,7 @@
     "            q_p_u_dict (dictionary): This dictionary holds all of the q, p, and u values for ALL of the agents\n",
     "        '''\n",
     "        assert agent in self.agents, 'this agent\\'s values have not been added to the blackboard.  please call \"self.update_q_p_u_dict(<agent>)\" before calling this method'\n",
-    "        q_p_u_dict = {'q':{}, 'p':{}, 'u':{}}\n",
+    "        q_p_u_dict = {'q_l':{}, 'p_l':{}, 'p_mf':{}, 'u':{}}\n",
     "        # find which states pertain to this agent\n",
     "        # for the states that don't, get the values from q_p_u_dict and put them into qp_vec\n",
     "        for state_ix in agent.state_indices:\n",
@@ -655,14 +655,16 @@
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
     "        # assert that the number of states is same as number of costates:\n",
-    "        assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
+    "#         assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
     "        # TODO: no need to require that the agent instance have q_p_u_dict defined - we can get this information from attributes of the agent\n",
     "        for state_ix in agent.state_indices:\n",
-    "            self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
-    "            self.q_p_u_dict['p'][str(state_ix)] = agent.q_p_u_dict['p'][str(state_ix)]\n",
+    "            import pdb; pdb.set_trace()\n",
+    "            self.q_p_u_dict['q_l'][str(state_ix)] = agent.qpu_vec[:agent.state_dim]\n",
+    "            self.q_p_u_dict['p_l'][str(state_ix)] = agent.qpu_vec[agent.state_dim:2*agent.state_dim]\n",
+    "            self.q_p_u_dict['p_mf'][str(state_ix)] = agent.qpu_vec[2*agent.state_dim:3*agent.state_dim]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
-    "            self.q_p_u_dict['u'][str(control_ix)] = agent.q_p_u_dict['u'][str(control_ix)]\n",
+    "            self.q_p_u_dict['u'][str(control_ix)] = agent.qpu_vec[3*agent.state_dim:]\n",
     "        self.agents.append(agent)\n",
     "    # Look at what things the Blackboard needs\n",
     "    # It at least needs a mapping that tells which states pertain to which agent\n",
@@ -682,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -695,27 +697,91 @@
     "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1])\n",
     "\n",
     "# TODO: Create a method to do this automatically: By knowing q and p values, and knowing state and control indices, we can fill in q_p_u_dict\n",
-    "myAgent.q_p_u_dict={}\n",
-    "myAgent.q_p_u_dict['q']={}\n",
-    "myAgent.q_p_u_dict['q']['1']=0\n",
-    "myAgent.q_p_u_dict['q']['2']=1\n",
+    "# myAgent.q_p_u_dict={}\n",
+    "# myAgent.q_p_u_dict['q']={}\n",
+    "# myAgent.q_p_u_dict['q']['1']=0\n",
+    "# myAgent.q_p_u_dict['q']['2']=1\n",
     "\n",
-    "myAgent.q_p_u_dict['p']={}\n",
-    "myAgent.q_p_u_dict['p']['1']=0\n",
-    "myAgent.q_p_u_dict['p']['2']=1\n",
+    "# myAgent.q_p_u_dict['p']={}\n",
+    "# myAgent.q_p_u_dict['p']['1']=0\n",
+    "# myAgent.q_p_u_dict['p']['2']=1\n",
     "\n",
-    "myAgent.q_p_u_dict['u']={}\n",
-    "myAgent.q_p_u_dict['u']['1']=0\n",
-    "myAgent.q_p_u_dict['u']['2']=1"
+    "# myAgent.q_p_u_dict['u']={}\n",
+    "# myAgent.q_p_u_dict['u']['1']=0\n",
+    "# myAgent.q_p_u_dict['u']['2']=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-19-2345cfbe8340>(65)update_q_p_u_dict()\n",
+      "-> self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
+      "(Pdb) agent\n",
+      "<__main__.Agent instance at 0x104d7d8c0>\n",
+      "(Pdb) agent.q\n",
+      "*** AttributeError: Agent instance has no attribute 'q'\n",
+      "(Pdb) agent.qpu_vec\n",
+      "array([0, 0, 0, 0])\n",
+      "(Pdb) state_ix\n",
+      "1\n",
+      "(Pdb) l\n",
+      " 60  \t        # assert that the number of states is same as number of costates:\n",
+      " 61  \t#         assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
+      " 62  \t        # TODO: no need to require that the agent instance have q_p_u_dict defined - we can get this information from attributes of the agent\n",
+      " 63  \t        for state_ix in agent.state_indices:\n",
+      " 64  \t            import pdb; pdb.set_trace()\n",
+      " 65  ->\t            self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
+      " 66  \t            self.q_p_u_dict['p'][str(state_ix)] = agent.q_p_u_dict['p'][str(state_ix)]\n",
+      " 67  \t            \n",
+      " 68  \t        for control_ix in agent.control_indices:\n",
+      " 69  \t            self.q_p_u_dict['u'][str(control_ix)] = agent.q_p_u_dict['u'][str(control_ix)]\n",
+      " 70  \t        self.agents.append(agent)\n",
+      "(Pdb) print 'see if the string indexing is actually neessary'\n",
+      "see if the string indexing is actually neessary\n",
+      "(Pdb) agent.state_indices\n",
+      "[1]\n",
+      "(Pdb) print 'only state_ix needed?'\n",
+      "only state_ix needed?\n",
+      "(Pdb) print 'the string index'\n",
+      "the string index\n",
+      "(Pdb) agent.qpu_vec\n",
+      "array([0, 0, 0, 0])\n",
+      "(Pdb) l\n",
+      " 71  \t    # Look at what things the Blackboard needs\n",
+      " 72  \t    # It at least needs a mapping that tells which states pertain to which agent\n",
+      " 73  \t    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary\n",
+      "[EOF]\n",
+      "(Pdb) agent.qpu_vec[state_ix]\n",
+      "0\n",
+      "(Pdb) agent.qpu_vec[:agent.state_dim]\n",
+      "array([0])\n",
+      "(Pdb) exit()\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-163bb6be3765>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_q_p_u_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-2345cfbe8340>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mstate_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-19-2345cfbe8340>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mstate_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "bb.update_q_p_u_dict(myAgent)"
    ]
