Fixed the method update_q_p_u_dict in class BlackBoard, but now need to fix construct_p_q.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -601,16 +601,13 @@
     "        '''\n",
     "#         state_agent_mapping is dictionary with keys: object of class Agent, \n",
     "#               values: list of integers state_indices state_indices\n",
-    "        '''\n",
-    "#         self.state_agent_mapping={}\n",
-    "        '''       \n",
     "        q_p_u_dict is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
     "                        blackboard holds all of the most recent local values, e.g.\n",
-    "                        {'q': {'1':3, '2':0}, 'p': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
+    "                        {'q_l': {'1':3, '2':0}, 'p_mf': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
     "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
-    "        q_p_u_dict initially will be filled \n",
+    "        q_p_u_dict initially will be filled\n",
     "        '''\n",
-    "        self.q_p_u_dict={'q':{}, 'p':{}, 'u':{}}\n",
+    "        self.q_p_u_dict={'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}}\n",
     "        self.agents=[]\n",
     "    \n",
     "    def construct_p_q(self, agent):\n",
@@ -622,53 +619,50 @@
     "            q_p_u_dict (dictionary): This dictionary holds all of the q, p, and u values for ALL of the agents\n",
     "        '''\n",
     "        assert agent in self.agents, 'this agent\\'s values have not been added to the blackboard.  please call \"self.update_q_p_u_dict(<agent>)\" before calling this method'\n",
-    "        q_p_u_dict = {'q_l':{}, 'p_l':{}, 'p_mf':{}, 'u':{}}\n",
+    "        q_p_u_dict = {'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}}\n",
     "        # find which states pertain to this agent\n",
+    "        # we cannot just return self.q_p_u_dict because the dimensions are different for different agents\n",
     "        # for the states that don't, get the values from q_p_u_dict and put them into qp_vec\n",
     "        for state_ix in agent.state_indices:\n",
-    "            q_p_u_dict['q'][str(state_ix)] = self.q_p_u_dict['q'][str(state_ix)]\n",
-    "            q_p_u_dict['p'][str(state_ix)] = self.q_p_u_dict['p'][str(state_ix)]\n",
+    "            q_p_u_dict['q_s'][str(state_ix)] = self.q_p_u_dict['q_s'][str(state_ix)]\n",
+    "            q_p_u_dict['p_l'][str(state_ix)] = self.q_p_u_dict['p_l'][str(state_ix)]\n",
     "\n",
     "        for control_ix in agent.control_indices:\n",
-    "            q_p_u_dict['u'][str(control_ix)] = self.q_p_u_dict['u'][str(control_ix)]\n",
+    "            q_p_u_dict['u_s'][str(control_ix)] = self.q_p_u_dict['u_s'][str(control_ix)]\n",
     "\n",
     "        # for state indices which are not part of agent.state_indices, fill in from blackboard q_p_u_dict\n",
-    "        assert len(set([str(x) for x in agent.control_indices]) - set(self.q_p_u_dict['u'].keys())) == 0, ' there should not be any controls in agent that are not in blackboard '\n",
-    "        assert len(set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q'].keys())) == 0, ' there should not be any states in agent that are not in blackboard '\n",
+    "        assert len(set([str(x) for x in agent.control_indices]) - set(self.q_p_u_dict['u_s'].keys())) == 0, ' there should not be any controls in agent that are not in blackboard '\n",
+    "        assert len(set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q_s'].keys())) == 0, ' there should not be any states in agent that are not in blackboard '\n",
     "\n",
     "        # blackboard - agent\n",
-    "        quenched_state_indices = set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q'].keys())\n",
+    "        quenched_state_indices = set([str(x) for x in agent.state_indices]) - set(self.q_p_u_dict['q_s'].keys())\n",
     "        # fill in with values from blackboard\n",
     "        for state_ix in quenched_state_indices:\n",
-    "            q_p_u_dict['q'][str(state_ix)] = self.q_p_u_dict['q'][str(state_ix)]\n",
-    "            q_p_u_dict['p'][str(state_ix)] = self.q_p_u_dict['p'][str(state_ix)]\n",
+    "            q_p_u_dict['q_s'][str(state_ix)] = self.q_p_u_dict['q_s'][str(state_ix)]\n",
+    "            q_p_u_dict['p_l'][str(state_ix)] = self.q_p_u_dict['p_l'][str(state_ix)]\n",
     "            \n",
     "        return q_p_u_dict\n",
     "    \n",
     "    def update_q_p_u_dict(self, agent):\n",
     "        '''  This method should be called after local propagation of each agent\n",
     "        Inputs:\n",
-    "            agent (instance of class Agent): this is the agent whos values we are updating\n",
+    "            agent (instance of class Agent): this is the agent whose values we are updating\n",
     "        Outputs:\n",
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
     "            just update the dictionary, agent_q_p_u_dict.\n",
     "        '''\n",
     "        # determine which states pertain to this agent and replace the old values with new\n",
-    "        # assert that the number of states is same as number of costates:\n",
-    "#         assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
-    "        # TODO: no need to require that the agent instance have q_p_u_dict defined - we can get this information from attributes of the agent\n",
+    "\n",
     "        for state_ix in agent.state_indices:\n",
-    "            import pdb; pdb.set_trace()\n",
-    "            self.q_p_u_dict['q_l'][str(state_ix)] = agent.qpu_vec[:agent.state_dim]\n",
-    "            self.q_p_u_dict['p_l'][str(state_ix)] = agent.qpu_vec[agent.state_dim:2*agent.state_dim]\n",
-    "            self.q_p_u_dict['p_mf'][str(state_ix)] = agent.qpu_vec[2*agent.state_dim:3*agent.state_dim]\n",
+    "            self.q_p_u_dict['q_s'][str(state_ix)] = agent.qpu_vec[:agent.state_dim][state_ix-1]\n",
+    "            self.q_p_u_dict['p_l'][str(state_ix)] = agent.qpu_vec[agent.state_dim:2*agent.state_dim][state_ix-1]\n",
+    "            self.q_p_u_dict['p_mf'][str(state_ix)] = agent.qpu_vec[2*agent.state_dim:3*agent.state_dim][state_ix-1]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
-    "            self.q_p_u_dict['u'][str(control_ix)] = agent.qpu_vec[3*agent.state_dim:]\n",
-    "        self.agents.append(agent)\n",
-    "    # Look at what things the Blackboard needs\n",
-    "    # It at least needs a mapping that tells which states pertain to which agent\n",
-    "    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary"
+    "            self.q_p_u_dict['u_s'][str(control_ix)] = agent.qpu_vec[3*agent.state_dim:][control_ix-1]\n",
+    "            \n",
+    "        if agent not in self.agents:\n",
+    "            self.agents.append(agent)\n"
    ]
   },
   {
@@ -684,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -713,82 +707,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> <ipython-input-19-2345cfbe8340>(65)update_q_p_u_dict()\n",
-      "-> self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
-      "(Pdb) agent\n",
-      "<__main__.Agent instance at 0x104d7d8c0>\n",
-      "(Pdb) agent.q\n",
-      "*** AttributeError: Agent instance has no attribute 'q'\n",
-      "(Pdb) agent.qpu_vec\n",
-      "array([0, 0, 0, 0])\n",
-      "(Pdb) state_ix\n",
-      "1\n",
-      "(Pdb) l\n",
-      " 60  \t        # assert that the number of states is same as number of costates:\n",
-      " 61  \t#         assert len(agent.q_p_u_dict['q']) == len(agent.q_p_u_dict['p']), 'Number of states is not same as number of costates'\n",
-      " 62  \t        # TODO: no need to require that the agent instance have q_p_u_dict defined - we can get this information from attributes of the agent\n",
-      " 63  \t        for state_ix in agent.state_indices:\n",
-      " 64  \t            import pdb; pdb.set_trace()\n",
-      " 65  ->\t            self.q_p_u_dict['q'][str(state_ix)] = agent.q_p_u_dict['q'][str(state_ix)]\n",
-      " 66  \t            self.q_p_u_dict['p'][str(state_ix)] = agent.q_p_u_dict['p'][str(state_ix)]\n",
-      " 67  \t            \n",
-      " 68  \t        for control_ix in agent.control_indices:\n",
-      " 69  \t            self.q_p_u_dict['u'][str(control_ix)] = agent.q_p_u_dict['u'][str(control_ix)]\n",
-      " 70  \t        self.agents.append(agent)\n",
-      "(Pdb) print 'see if the string indexing is actually neessary'\n",
-      "see if the string indexing is actually neessary\n",
-      "(Pdb) agent.state_indices\n",
-      "[1]\n",
-      "(Pdb) print 'only state_ix needed?'\n",
-      "only state_ix needed?\n",
-      "(Pdb) print 'the string index'\n",
-      "the string index\n",
-      "(Pdb) agent.qpu_vec\n",
-      "array([0, 0, 0, 0])\n",
-      "(Pdb) l\n",
-      " 71  \t    # Look at what things the Blackboard needs\n",
-      " 72  \t    # It at least needs a mapping that tells which states pertain to which agent\n",
-      " 73  \t    # It needs to keep track of all states, costates, controls for all agents so that we can plug in values when necessary\n",
-      "[EOF]\n",
-      "(Pdb) agent.qpu_vec[state_ix]\n",
-      "0\n",
-      "(Pdb) agent.qpu_vec[:agent.state_dim]\n",
-      "array([0])\n",
-      "(Pdb) exit()\n"
-     ]
-    },
-    {
-     "ename": "BdbQuit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-163bb6be3765>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_q_p_u_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-19-2345cfbe8340>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mstate_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-19-2345cfbe8340>\u001b[0m in \u001b[0;36mupdate_q_p_u_dict\u001b[0;34m(self, agent)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mstate_ix\u001b[0m \u001b[0;32min\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mBdbQuit\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bb.update_q_p_u_dict(myAgent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -796,10 +726,10 @@
     {
      "data": {
       "text/plain": [
-       "{'p': {'1': 0}, 'q': {'1': 0}, 'u': {'1': 0}}"
+       "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,13 +740,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "q_p_u_dict = bb.construct_p_q(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'p_l': {'1': 0}, 'p_mf': {}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_p_u_dict"
    ]
   },
   {
