Removed orphaned code.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -374,34 +374,6 @@
     "        # for u-dot\n",
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "#     def qp_rhs_H_s_nou(self, t, qp_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF\n",
-    "#         # kwargs should have quenched values\n",
-    "#         qp_vec_quenched = self.bb.construct_q_p(qp_vec, self)\n",
-    "#         # yes it is really slow, but we read from blackboard every time we evaluate this\n",
-    "#         qp_rhs_H_s = (1-alpha)*self.qp_rhs_H_l_nou(qp_vec) + alpha*mf.qp_rhs_H_mf_nou(qp_vec)\n",
-    "#         # must return result in qp_vec format because ode rk23 will call this\n",
-    "#         # qp_rhs_H_s should look like this: np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "#         return qp_rhs_H_s\n",
-    "       \n",
-    "#     def qp_rhs_H_s_u(self, t, qp_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec) + alpha*qp_rhs_MF()\n",
-    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "       \n",
-    "#     def u_rhs_H_s_nou(self, t, u_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         Gamma = kwargs['Gamma']\n",
-    "#         # for u-dot\n",
-    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
-    "#     def u_rhs_H_s_u(self, t, u_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "#         Gamma = kwargs['Gamma']\n",
-    "#         # for u-dot\n",
-    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
     "    def H_l_D():\n",
     "        pass\n",
     "        \n",
@@ -503,12 +475,8 @@
     "\n",
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
-    "#         p_H_mf_nou_dot_2 = q_s[1] + p_mf[1] # this line is the problem\n",
     "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
     "\n",
-    "#     def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
-    "#         # first find out if this needs to be a RHS function, or if it is only called internally.\n",
-    "    \n",
     "    def p_rhs_H_mf_u():\n",
     "        pass\n",
     "          "
@@ -687,21 +655,7 @@
     "mean_field = MeanField()\n",
     "\n",
     "myAgent=Agent(mean_field, bb, state_indices=[1], control_indices=[1])\n",
-    "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1])\n",
-    "\n",
-    "# TODO: Create a method to do this automatically: By knowing q and p values, and knowing state and control indices, we can fill in q_p_u_dict\n",
-    "# myAgent.q_p_u_dict={}\n",
-    "# myAgent.q_p_u_dict['q']={}\n",
-    "# myAgent.q_p_u_dict['q']['1']=0\n",
-    "# myAgent.q_p_u_dict['q']['2']=1\n",
-    "\n",
-    "# myAgent.q_p_u_dict['p']={}\n",
-    "# myAgent.q_p_u_dict['p']['1']=0\n",
-    "# myAgent.q_p_u_dict['p']['2']=1\n",
-    "\n",
-    "# myAgent.q_p_u_dict['u']={}\n",
-    "# myAgent.q_p_u_dict['u']['1']=0\n",
-    "# myAgent.q_p_u_dict['u']['2']=1"
+    "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1])"
    ]
   },
   {
